# webclip

./: MANIFEST.in  Makefile  README.md  clipboard.html.jinja  main.py  pyproject.toml  setup.cfg
webclip/: __init__.py  __main__.py  clipboard.html.jinja
