[tool.poetry]
name = "winclip"
version = "0.1.0"
description = ""
authors = ["Ryan Barth <ryan@barth.tech>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^20.0.4"
bottle = "^0.12.18"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
