[metadata]
name = webclip
version = 0.1.0
author = Ryan Barth
author_email = ryan@barth.tech
license = MIT
long_description = README.md
keywords = tmux, clipboard, web, gui
platform = Linux
classifiers =
  Framework :: Bottle
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Environment :: Web Environment

[options]
zip_safe = True
include_package_data = True
packages=find:
install_requires =
  bottle >= 0.12.18

[options.package_data]
* =
  *.html.jinja
